[project]
name = "DemoHook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Karel@Air", email = "wukaixuan211@gmail.com"},
]
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "mypy>=1.8.0",
    "loguru>=0.7.2",
    "alembic>=1.13.1",
    "orjson>=3.9.10",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
